@@ -3,6 +3,7 @@
         * win32/* build files for Visual Studio, now works in Win32. Thanks 
         Lyle Arnot for provide this files.
         * eLoader added eLoader is a standalone loader for encode files.
+        * eaccelerator.name_space config parameter added. Patch 1090379
 
 2004-12-24  Everaldo Canuto <everaldo_canuto at yahoo.com.br>
 
